--- a/.github/workflows/.sync.yml
+++ b/.github/workflows/.sync.yml
@@ -17,6 +17,9 @@ jobs:
           git config --global user.email 83216092+MarkusSchilling@users.noreply.github.com
           git config --global user.name MarkusSchilling
 
+      - name: Add upstream remote
+        run: git remote add upstream https://github.com/scientific-ontology-network/ontology-development-guide
+
       - name: Fetch upstream changes
         run: git fetch upstream
 
