--- a/.github/workflows/.sync.yml
+++ b/.github/workflows/.sync.yml
@@ -24,7 +24,7 @@ jobs:
         run: git fetch upstream
 
       - name: Merge upstream changes
-        run: git merge upstream/main --no-edit
+        run: git merge upstream/main --no-edit --allow-unrelated-histories
 
       - name: Push changes to fork
         run: git push origin main
