--- a/.github/workflows/.sync.yml
+++ b/.github/workflows/.sync.yml
@@ -19,12 +19,24 @@ jobs:
 
       - name: Add upstream remote
         run: git remote add upstream https://github.com/scientific-ontology-network/ontology-development-guide
+      
+      - name: Pull upstream
+        run: git pull --unshallow
 
       - name: Fetch upstream changes
         run: git fetch upstream
 
       - name: Merge upstream changes
-        run: git merge upstream/main --no-edit --allow-unrelated-histories
+        run: git merge upstream/main --no-edit --allow-unrelated-histories || echo "Merge conflict occurred"
+
+      - name: Check for merge conflicts
+        run: |
+          if git diff --quiet; then
+            echo "No merge conflicts found. Proceeding with push."
+          else
+            echo "Merge conflicts found. Please resolve conflicts manually and commit changes."
+            exit 1
+          fi
 
       - name: Push changes to fork
         run: git push origin main
